--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="mask-icon" type="" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 
 
-  <title>CodePen - 2101-1</title>
+  <title>CodePen - 2102-1</title>
   
   
   
@@ -41,55 +41,82 @@
   <div class="student" id="roryleonard">
     <span>Rory Leonard</span>
   </div>
-  
-    <div class="student" id="williamgross">
-    <span>William Gross</span>
-  </div>
-  
   <div class="student" id="colehansen">
     <span>Cole Hansen</span>
   </div>
-  
+    <div class="student" id="williamgross">
+    <span>William Gross</span>
+  </div>
 </div>
 <button id="pickStudent">Random Student</button>
 <div>
-  Random Student: <span id="picked">...</span>
+  Random Student <span id="picked">...</span>
   
 </div>
   
   
       <script id="rendered-js" >
 console.clear();
-console.log("hello world");
 
 const students = [];
 
-function makeStudent(username,first,last,gradelevel){
+function makeStudent(username, first, last, gradelevel) {
   const student = {};
   student.username = username;
   student.first = first;
   student.last = last;
   student.gradelevel = gradelevel;
+  student.clickcount = 0;
+  student.lasttime = Date.now();
   return student;
 }
-students.push(makeStudent("colehansen","Cole","Hansen","9"));
-students.push(makeStudent("roryleonard","Rory","Leonard","9"));
-students.push(makeStudent("williamgross","William","Gross","10"))
-console.log(students);
+students.push(makeStudent("colehansen", "Cole", "Hansen", "9"));
+students.push(makeStudent("roryleonard", "Rory", "Leonard", "9"));
+students.push(makeStudent("williamgross", "William", "Gross", "10"));
 
-function pickStudent(){
-  let randomStudentNum = Math.floor(Math.random()*students.length);
-  console.log(randomStudentNum);
+function pickStudent() {
+  let randomStudentNum = Math.floor(Math.random() * students.length);
   let student = students[randomStudentNum];
-  console.log(student);
-  document.getElementById("picked").textContent = student.first + " " + student.last;
+  document.getElementById("picked").textContent =
+    student.first + " " + student.last;
 }
 
 pickStudent();
 
 let element = document.getElementById("pickStudent");
 
-element.addEventListener("click",pickStudent);
+element.addEventListener("click", pickStudent);
+
+function renderList() {
+  console.log("renderList");
+  students.sort(function (a, b) {
+    return a.clickcount - b.clickcount;
+  });
+  let content = "";
+
+  for (let i = 0; i < students.length; i++) {
+    content += `<div class="student" id="${students[i].username}"> ${students[i].first} ${students[i].last} ${students[i].clickcount}</div>\n`;
+  }
+
+  let element = document.getElementById("container");
+  element.innerHTML = content;
+}
+
+function listclick(e) {
+  console.log(e.target.id);
+
+  for (let i = 0; i < students.length; i++) {
+    if (students[i].username == e.target.id) {
+      students[i].clickcount++;
+    }
+  }
+
+  renderList();
+}
+
+let renderclick = document.getElementById("container");
+renderclick.addEventListener("click", listclick);
+renderList();
     </script>
 
   
@@ -97,4 +124,3 @@ element.addEventListener("click",pickStudent);
 </body>
 
 </html>
- 
